--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
   <header>
     <!-- Replace with your banner logo -->
-    <img src="assets/banner-logo.png" alt="Michael's Phonics Hub">
+    <img src="assets/banner-logo.svg" alt="Michael's Phonics Hub">
   </header>
   <main>
     <div class="grid">
