--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       min-height: 100vh;
     }
     header {
-      background-color: var(--white);
+  background-color: #FAF4E8;
       padding: 1.5rem;
       text-align: center;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
