Change logo to webp

--- a/cvc/index.html
+++ b/cvc/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="../assets/logo-cvc.svg" alt="Michael's CVC Phonics Logo">
+    <img src="../assets/logo-cvc.webp" alt="Michael's CVC Phonics Logo">
   </header>
   <main>
     <div class="grid" style="max-width: 500px;">
