Change logo to webp

--- a/sightwords/index.html
+++ b/sightwords/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="../assets/logo-fry.svg" alt="Michael's Sight Words Logo">
+    <img src="../assets/logo-fry.webp" alt="Michael's Sight Words Logo">
   </header>
   <main>
     <div class="grid" style="max-width: 500px;">
