Change logo to webp

--- a/cvc/test.html
+++ b/cvc/test.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <!-- Logo for CVC Phonics -->
-    <img src="../assets/logo-cvc.png" alt="Michael's CVC Phonics Logo">
+    <img src="../assets/logo-cvc.webp" alt="Michael's CVC Phonics Logo">
   </header>
 
   <main>
