--- a/sightwords/test.html
+++ b/sightwords/test.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="../assets/logo-fry.png" alt="Michael's Sight Words Logo">
+    <img src="../assets/logo-fry.webp" alt="Michael's Sight Words Logo">
   </header>
 
   <main>
