--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Michael's Phonics Hub provides free, interactive CVC phonics and Fry sight-words quizzes to help children build essential reading skills in a fun, engaging way.">
+  <meta name="keywords" content="phonics, CVC phonics, sight words, Fry list, reading practice, early literacy, educational games">
+  <meta name="author" content="Michael's Phonics Hub">
   <title>Michael's Phonics Hub</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
@@ -23,7 +27,7 @@
       min-height: 100vh;
     }
     header {
-  background-color: #FAF4E8;
+      background-color: #FAF4E8;
       padding: 1.5rem;
       text-align: center;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
