Update index.html to add Learn button

--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
     <!-- Replace with your banner logo -->
     <img src="assets/banner-logo.webp" alt="Michael's Phonics Hub">
   </header>
-  <main>
+    <main>
     <div class="grid">
-      <a href="cvc/index.html" class="btn">CVC Phonics Test</a>
+      <a href="cvc/index.html"       class="btn">CVC Phonics Test</a>
       <a href="sightwords/index.html" class="btn">Sight Words Test</a>
+      <a href="learn/builder.html"     class="btn">Learn CVC Words</a>
     </div>
   </main>
   <footer>
