--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Michael's Phonics Hub provides free, interactive CVC phonics and Fry sight-words quizzes to help children build essential reading skills in a fun, engaging way.">
-  <meta name="keywords" content="phonics, CVC phonics, sight words, Fry list, reading practice, early literacy, educational games">
+  <!-- SEO Meta Tags (optional but recommended) -->
+  <meta name="description" content="Michael's Phonics Hub provides interactive quizzes and learning activities for CVC phonics and sight words, helping children build early reading skills.">
+  <meta name="keywords" content="phonics, CVC words, sight words, reading practice, early literacy, learn phonics">
   <meta name="author" content="Michael's Phonics Hub">
+  
   <title>Michael's Phonics Hub</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
@@ -17,7 +18,11 @@
       --text-dark: #1a1a1a;
       --white: #ffffff;
     }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Nunito', sans-serif;
       background-color: var(--bg);
@@ -50,6 +55,7 @@
       gap: 2rem;
       width: 100%;
       max-width: 400px;
+      margin: 0 auto;
     }
     .btn {
       display: block;
@@ -80,12 +86,15 @@
     <!-- Replace with your banner logo -->
     <img src="assets/banner-logo.webp" alt="Michael's Phonics Hub">
   </header>
+
   <main>
     <div class="grid">
       <a href="cvc/index.html" class="btn">CVC Phonics Test</a>
       <a href="sightwords/index.html" class="btn">Sight Words Test</a>
+      <a href="learn/index.html" class="btn">Learn CVC Words</a>
     </div>
   </main>
+
   <footer>
     &copy; 2025 Michael's Phonics Hub
   </footer>
