--- a/learn/index.html
+++ b/learn/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
   <header>
-    <img src="../assets/banner-logo.webp" alt="Michael's Phonics Hub">
+    <!-- Learn page logo -->
+    <img src="../assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
   </header>
 
   <main>
     <h1>Learning Activities</h1>
     <div class="grid" style="max-width: 400px; margin: 2rem auto;">
-      <a href="builder.html"    class="btn">Interactive Word Builder</a>
-      <!-- future games: 
-      <a href="sound-match.html" class="btn">Listen & Match</a>
-      <a href="memory.html"     class="btn">Word-Picture Memory</a>
+      <a href="builder.html" class="btn">Interactive Word Builder</a>
+      <!-- future games:
+      <a href="sound-match.html" class="btn">Listen &amp; Match</a>
+      <a href="memory.html" class="btn">Word-Picture Memory</a>
       -->
     </div>
     <a href="../index.html" class="btn" style="max-width:200px; margin:2rem auto; display:block;">
