--- a/learn/builder.html
+++ b/learn/builder.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <header>
-    <img src="../assets/banner-logo.webp" alt="Michael's Phonics Hub">
+    <!-- Learn section logo -->
+    <img src="../assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
   </header>
 
   <main>
