--- a/learn/builder.html
+++ b/learn/builder.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Build CVC Words</title>
+  <!-- Shared site CSS -->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- Builder-specific CSS -->
   <link rel="stylesheet" href="styles/builder.css">
 </head>
 <body>
   <header>
+    <!-- Learn section logo -->
     <img src="../assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
   </header>
 
@@ -16,7 +19,7 @@
     <!-- Level Picker -->
     <div id="level-picker" style="text-align:center; margin:2rem 0;">
       <h2>Select Level</h2>
-      <div class="grid" style="max-width:400px; margin:1rem auto;">
+      <div class="grid level-grid" style="max-width:400px; margin:1rem auto;">
         <a href="builder.html?level=Level%20A" class="btn">Level A</a>
         <a href="builder.html?level=Level%20B" class="btn">Level B</a>
         <a href="builder.html?level=Level%20C" class="btn">Level C</a>
@@ -29,8 +32,8 @@
       <!-- Title showing chosen level -->
       <h2 id="builder-title"></h2>
 
-      <!-- Image prompt: show immediately under title -->
-      <div id="image-container" style="margin:1rem auto;"></div>
+      <!-- Prompt image: shown immediately under title -->
+      <div id="image-container"></div>
 
       <!-- Slots for the three letters -->
       <section class="slots">
@@ -43,16 +46,16 @@
       <section class="letters"></section>
 
       <!-- Controls: Check and New Word -->
-      <div style="margin-top: 1.5rem; display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;">
+      <div class="controls">
         <button id="check-btn" class="btn">Check Word</button>
         <button id="new-word-btn" class="btn">New Word</button>
       </div>
 
       <!-- Feedback text (“Well done!” / “Try again!”) -->
-      <div id="feedback" style="margin-top:1rem;"></div>
+      <div id="feedback"></div>
 
       <!-- Navigation buttons -->
-      <div style="margin-top:2rem; display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;">
+      <div class="nav-controls">
         <a href="builder.html" class="btn">Back to Levels</a>
         <a href="index.html" class="btn">Back to Learn</a>
       </div>
@@ -61,6 +64,7 @@
 
   <footer>&copy; 2025 Michael's Phonics Hub</footer>
 
+  <!-- Builder logic as ES module -->
   <script type="module" src="scripts/builder.js"></script>
 </body>
 </html>
