--- a/learn/builder.html
+++ b/learn/builder.html
@@ -13,10 +13,13 @@
   <header>
     <!-- Learn section logo -->
     <img src="../assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
+    <!-- Optionally, you can add a header title here if desired:
+    <h1>Build CVC Words</h1>
+    -->
   </header>
 
   <main>
-    <!-- Level Picker -->
+    <!-- Level Picker: shown if no valid ?level= query -->
     <div id="level-picker" style="text-align:center; margin:2rem 0;">
       <h2>Select Level</h2>
       <div class="grid level-grid" style="max-width:400px; margin:1rem auto;">
@@ -42,7 +45,7 @@
         <div class="slot" data-index="2"></div>
       </section>
 
-      <!-- Draggable letter tiles will be injected here -->
+      <!-- Draggable/tappable letter tiles will be injected here -->
       <section class="letters"></section>
 
       <!-- Controls: Check and New Word -->
