--- a/learn/picture-match.html
+++ b/learn/picture-match.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CVC Phonics Picture-Word Match</title>
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="styles/picture-to-word.css">
 </head>
 <body>
 
