--- a/learn/index.html
+++ b/learn/index.html
@@ -15,12 +15,10 @@
   <title>Learning Activities – Michael's Phonics Hub</title>
   <link rel="stylesheet" href="../styles/main.css">
   <style>
-    /* If you want additional styling specific to this page: */
     header {
       display: flex;
       flex-direction: column;
       align-items: center;
-      /* background, padding, etc., come from main.css */
     }
     header h1 {
       margin-top: 0.5rem;
@@ -28,22 +26,20 @@
       color: var(--text-dark);
     }
     main h1.page-title {
-      display: none; /* not used since title is in header */
+      display: none;
     }
   </style>
 </head>
 <body>
   <header>
-    <!-- Learn section logo -->
     <img src="../assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
-    <!-- Centre the page title in the header -->
     <h1>Learning Activities</h1>
   </header>
 
   <main>
-    <!-- We no longer need a separate <h1> here since it’s in header -->
     <div class="grid" style="max-width: 400px; margin: 2rem auto;">
       <a href="builder.html" class="btn">Interactive Word Builder</a>
+      <a href="picture-match.html" class="btn">Picture-to-Word Match</a>
       <!-- future games:
       <a href="sound-match.html" class="btn">Listen &amp; Match</a>
       <a href="memory.html" class="btn">Word-Picture Memory</a>
@@ -58,3 +54,4 @@
   <footer>&copy; 2025 Michael's Phonics Hub</footer>
 </body>
 </html>
+
