--- a/learn/picture-match.html
+++ b/learn/picture-match.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="styles/picture-to-word.css">
 </head>
 <body>
+    <div style="text-align:center; margin-top: 2rem;">
+    <img src="../assets/logo-learn.webp" alt="Learn CVC with Michael" style="max-width:320px; width:100%; height:auto;">
+  </div>
 
   <!-- Level Selection Screen -->
   <div id="level-selection" class="screen">
