--- a/learn/picture-match.html
+++ b/learn/picture-match.html
@@ -26,7 +26,7 @@
   <!-- Game Screen (initially hidden) -->
   <div id="game-screen" class="screen" style="display:none;">
     <!-- Optionally, a back button to level selection -->
-    <button id="back-btn">← Levels</button>
+    <button id="back-btn" class="bubble-btn">← Levels</button>
 
     <!-- Display the current round image and options -->
     <div id="image-container" class="image-container drop-target">
