--- a/learn/decodable/book12/read.html
+++ b/learn/decodable/book12/read.html
@@ -50,8 +50,16 @@
       <button id="next" class="flip-btn">Next →</button>
     </div>
 
+    <!-- Fallback for non-JS users -->
     <noscript>
-      <p class="no-js-warning">JavaScript is required to view this book. Please enable it in your browser settings.</p>
+      <p class="no-js-warning">It looks like JavaScript is disabled. View all pages below:</p>
+      <div class="no-js-book">
+        <div class="book-page"><img src="/assets/images/book12/page1.webp" alt="I Can Hop - Page 1"></div>
+        <div class="book-page"><img src="/assets/images/book12/page2.webp" alt="I Can Hop - Page 2"></div>
+        <div class="book-page"><img src="/assets/images/book12/page3.webp" alt="I Can Hop - Page 3"></div>
+        <div class="book-page"><img src="/assets/images/book12/page4.webp" alt="I Can Hop - Page 4"></div>
+        <!-- Add more .book-page blocks for additional pages -->
+      </div>
     </noscript>
   </main>
 
