--- a/learn/decodable/book12/video.html
+++ b/learn/decodable/book12/video.html
@@ -33,7 +33,7 @@
     <video
       controls
       preload="metadata"
-      poster="/assets/images/decodable/book12/poster.jpg"
+      poster="/assets/images/decodable/book12/poster.webp"
       width="854" height="480"
       class="responsive-video"
     >
