--- a/learn/decodable/book12/prelearning.html
+++ b/learn/decodable/book12/prelearning.html
@@ -79,17 +79,17 @@
       <table>
         <tr>
           <td>h</td>
-          <td></td>
+          <td><button class="sound-btn" data-sound="op">-op</button></td>
           <td><button class="sound-btn" data-sound="hop">hop</button></td>
         </tr>
         <tr>
           <td>m</td>
-          <td>-op</td>
+          <td><button class="sound-btn" data-sound="op">-op</button></td>
           <td><button class="sound-btn" data-sound="mop">mop</button></td>
         </tr>
         <tr>
           <td>t</td>
-          <td></td>
+          <td><button class="sound-btn" data-sound="op">-op</button></td>
           <td><button class="sound-btn" data-sound="top">top</button></td>
         </tr>
       </table>
@@ -98,22 +98,24 @@
       <table>
         <tr>
           <td>d</td>
-          <td></td>
+          <td><button class="sound-btn" data-sound="ot">-ot</button></td>
           <td><button class="sound-btn" data-sound="dot">dot</button></td>
         </tr>
         <tr>
           <td>h</td>
-          <td>-ot</td>
+          <td><button class="sound-btn" data-sound="ot">-ot</button></td>
           <td><button class="sound-btn" data-sound="hot">hot</button></td>
         </tr>
         <tr>
           <td>p</td>
-          <td></td>
+          <td><button class="sound-btn" data-sound="ot">-ot</button></td>
           <td><button class="sound-btn" data-sound="pot">pot</button></td>
         </tr>
       </table>
 
-      <!-- Audio for blended words -->
+      <!-- Audio for blended words and rimes -->
+      <audio id="sound-op" src="/assets/audio/op.mp3" preload="none"></audio>
+      <audio id="sound-ot" src="/assets/audio/ot.mp3" preload="none"></audio>
       <audio id="sound-hop" src="/assets/audio/hop.mp3" preload="none"></audio>
       <audio id="sound-mop" src="/assets/audio/mop.mp3" preload="none"></audio>
       <audio id="sound-top" src="/assets/audio/top.mp3" preload="none"></audio>
