--- a/learn/index.html
+++ b/learn/index.html
@@ -5,9 +5,8 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S7FFSC0HF4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag(){dataLayer.push(arguments);}  
   gtag('js', new Date());
-
   gtag('config', 'G-S7FFSC0HF4');
 </script>
   <meta charset="UTF-8">
@@ -40,6 +39,7 @@
     <div class="grid" style="max-width: 400px; margin: 2rem auto;">
       <a href="builder.html" class="btn">Interactive Word Builder</a>
       <a href="picture-match.html" class="btn">Picture-to-Word Match</a>
+      <a href="decodable/index.html" class="btn">Decodable Books</a>
       <!-- future games:
       <a href="sound-match.html" class="btn">Listen &amp; Match</a>
       <a href="memory.html" class="btn">Word-Picture Memory</a>
@@ -54,4 +54,3 @@
   <footer>&copy; 2025 Michael's Phonics Hub</footer>
 </body>
 </html>
-
