--- a/learn/decodable/index.html
+++ b/learn/decodable/index.html
@@ -21,11 +21,17 @@
         <ul>
           <li><a href="/learn/index.html">Learning Activities</a></li>
           <li><a href="/learn/decodable/index.html" class="active">Decodable Books</a></li>
-          <!-- Other nav items -->
         </ul>
       </nav>
     </div>
   </header>
+
+  <!-- Breadcrumb Buttons -->
+  <div class="container breadcrumb-buttons" style="margin: 1rem auto; max-width: 400px; text-align: center;">
+    <a href="/" class="btn">CVC Phonics</a>
+    <a href="/learn/index.html" class="btn">Learning Activities</a>
+    <a href="/learn/decodable/index.html" class="btn active">Decodable Books</a>
+  </div>
 
   <!-- Main Content -->
   <main class="decodable-index container">
@@ -33,14 +39,14 @@
     <p>Select a book below to begin:</p>
 
     <div class="book-grid">
-      <!-- Example Book Card -->
+      <!-- Book 12 Card -->
       <div class="book-card">
-        <a href="./book1/menu.html">
-          <img src="/assets/images/decodable/cat-on-mat-cover.webp" alt="Cat on a Mat cover">
-          <h2>Cat on a Mat</h2>
+        <a href="./book12/menu.html">
+          <img src="/assets/images/decodable/book12/cover.webp" alt="I Can Hop cover">
+          <h2>I Can Hop</h2>
         </a>
       </div>
-      <!-- Repeat .book-card for each book -->
+      <!-- Add future book-cards here -->
     </div>
   </main>
 
