--- a/learn/decodable/index.html
+++ b/learn/decodable/index.html
@@ -13,10 +13,12 @@
   <link rel="stylesheet" href="/styles/decodable.css">
 </head>
 <body>
-  <!-- Header/Nav -->
-  <header class="site-header">
+  <!-- Header matching Learn style -->
+  <header class="site-header learn-header">
     <div class="container">
-      <a href="/" class="logo">CVC Phonics</a>
+      <a href="/learn/index.html" class="logo">
+        <img src="/assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
+      </a>
       <nav class="main-nav">
         <ul>
           <li><a href="/learn/index.html">Learning Activities</a></li>
@@ -28,7 +30,6 @@
 
   <!-- Breadcrumb Buttons -->
   <div class="container breadcrumb-buttons" style="margin: 1rem auto; max-width: 400px; text-align: center;">
-    <a href="/" class="btn">CVC Phonics</a>
     <a href="/learn/index.html" class="btn">Learning Activities</a>
     <a href="/learn/decodable/index.html" class="btn active">Decodable Books</a>
   </div>
@@ -42,7 +43,7 @@
       <!-- Book 12 Card -->
       <div class="book-card">
         <a href="./book12/menu.html">
-          <img src="/assets/images/decodable/book12/cover.webp" alt="I Can Hop cover">
+          <img src="/assets/images/decodable/book12/poster.webp" alt="I Can Hop cover">
           <h2>I Can Hop</h2>
         </a>
       </div>
