--- a/learn/decodable/book12/prelearning.html
+++ b/learn/decodable/book12/prelearning.html
@@ -6,23 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pre-Learning | I Can Hop</title>
   <!-- Site-wide styles -->
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="../../../styles/main.css">
   <!-- Learn section styles -->
-  <link rel="stylesheet" href="/styles/learn.css">
+  <link rel="stylesheet" href="../../../styles/learn.css">
   <!-- Decodable section overrides -->
-  <link rel="stylesheet" href="/styles/decodable.css">
+  <link rel="stylesheet" href="../../../styles/decodable.css">
 </head>
 <body>
   <!-- Header matching Learn style -->
   <header class="site-header learn-header">
     <div class="container">
-      <a href="/learn/index.html" class="logo">
-        <img src="/assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
+      <a href="../../../learn/index.html" class="logo">
+        <img src="../../../assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
       </a>
       <nav class="main-nav">
         <ul>
-          <li><a href="/learn/index.html">Learning Activities</a></li>
-          <li><a href="/learn/decodable/index.html" class="active">Decodable Books</a></li>
+          <li><a href="../../../learn/index.html">Learning Activities</a></li>
+          <li><a href="../../index.html" class="active">Decodable Books</a></li>
         </ul>
       </nav>
     </div>
@@ -30,14 +30,14 @@
 
   <!-- Breadcrumb Buttons -->
   <div class="container breadcrumb-buttons" style="margin:1rem auto; max-width:400px;">
-    <a href="/learn/index.html" class="btn">Learning Activities</a>
-    <a href="/learn/decodable/index.html" class="btn active">Decodable Books</a>
+    <a href="../../../learn/index.html" class="btn">Learning Activities</a>
+    <a href="../../index.html" class="btn active">Decodable Books</a>
   </div>
 
   <main class="decodable-prelearning container">
     <h1>Pre-Learning: I Can Hop</h1>
 
-    <!-- 1. Phoneme Table -->
+    <!-- 1. Letter Sounds -->
     <section class="phoneme-table">
       <h2>Letter Sounds</h2>
       <table>
@@ -58,59 +58,101 @@
           <td colspan="3"></td>
         </tr>
       </table>
+
+      <!-- Audio elements -->
+      <audio id="sound-n" src="../../../assets/audio/n.mp3" preload="none"></audio>
+      <audio id="sound-a" src="../../../assets/audio/a.mp3" preload="none"></audio>
+      <audio id="sound-p" src="../../../assets/audio/p.mp3" preload="none"></audio>
+      <audio id="sound-m" src="../../../assets/audio/m.mp3" preload="none"></audio>
+      <audio id="sound-s" src="../../../assets/audio/s.mp3" preload="none"></audio>
+      <audio id="sound-t" src="../../../assets/audio/t.mp3" preload="none"></audio>
+      <audio id="sound-o" src="../../../assets/audio/o.mp3" preload="none"></audio>
+      <audio id="sound-d" src="../../../assets/audio/d.mp3" preload="none"></audio>
+      <audio id="sound-h" src="../../../assets/audio/h.mp3" preload="none"></audio>
     </section>
 
-    <!-- 2. Blending Section -->
+    <!-- 2. Blending -->
     <section class="blending">
       <h2>Blending</h2>
       <div class="blending-families">
         <div class="blending-family">
           <h3>-op Family</h3>
           <table>
-            <tr><td>h</td><td><button class="sound-btn" data-sound="op">-op</button></td><td><button class="sound-btn" data-sound="hop">hop</button></td></tr>
-            <tr><td>m</td><td><button class="sound-btn" data-sound="op">-op</button></td><td><button class="sound-btn" data-sound="mop">mop</button></td></tr>
-            <tr><td>t</td><td><button class="sound-btn" data-sound="op">-op</button></td><td><button class="sound-btn" data-sound="top">top</button></td></tr>
+            <tr>
+              <td>h</td>
+              <td><button class="sound-btn" data-sound="op">-op</button></td>
+              <td><button class="sound-btn" data-sound="hop">hop</button></td>
+            </tr>
+            <tr>
+              <td>m</td>
+              <td><button class="sound-btn" data-sound="op">-op</button></td>
+              <td><button class="sound-btn" data-sound="mop">mop</button></td>
+            </tr>
+            <tr>
+              <td>t</td>
+              <td><button class="sound-btn" data-sound="op">-op</button></td>
+              <td><button class="sound-btn" data-sound="top">top</button></td>
+            </tr>
           </table>
         </div>
-
         <div class="blending-family">
           <h3>-ot Family</h3>
           <table>
-            <tr><td>d</td><td><button class="sound-btn" data-sound="ot">-ot</button></td><td><button class="sound-btn" data-sound="dot">dot</button></td></tr>
-            <tr><td>h</td><td><button class="sound-btn" data-sound="ot">-ot</button></td><td><button class="sound-btn" data-sound="hot">hot</button></td></tr>
-            <tr><td>p</td><td><button class="sound-btn" data-sound="ot">-ot</button></td><td><button class="sound-btn" data-sound="pot">pot</button></td></tr>
+            <tr>
+              <td>d</td>
+              <td><button class="sound-btn" data-sound="ot">-ot</button></td>
+              <td><button class="sound-btn" data-sound="dot">dot</button></td>
+            </tr>
+            <tr>
+              <td>h</td>
+              <td><button class="sound-btn" data-sound="ot">-ot</button></td>
+              <td><button class="sound-btn" data-sound="hot">hot</button></td>
+            </tr>
+            <tr>
+              <td>p</td>
+              <td><button class="sound-btn" data-sound="ot">-ot</button></td>
+              <td><button class="sound-btn" data-sound="pot">pot</button></td>
+            </tr>
           </table>
         </div>
       </div>
+
+      <!-- Audio elements for blending -->
+      <audio id="sound-op" src="../../../assets/audio/op.mp3" preload="none"></audio>
+      <audio id="sound-ot" src="../../../assets/audio/ot.mp3" preload="none"></audio>
+      <audio id="sound-hop" src="../../../assets/audio/hop.mp3" preload="none"></audio>
+      <audio id="sound-mop" src="../../../assets/audio/mop.mp3" preload="none"></audio>
+      <audio id="sound-top" src="../../../assets/audio/top.mp3" preload="none"></audio>
+      <audio id="sound-dot" src="../../../assets/audio/dot.mp3" preload="none"></audio>
+      <audio id="sound-hot" src="../../../assets/audio/hot.mp3" preload="none"></audio>
+      <audio id="sound-pot" src="../../../assets/audio/pot.mp3" preload="none"></audio>
     </section>
 
     <!-- 3. High-Frequency Words -->
     <section class="high-frequency">
       <h2>High-Frequency Words</h2>
       <table>
-        <tr><td><button class="sound-btn" data-sound="hf-me">me</button></td><td><button class="sound-btn" data-sound="hf-of">of</button></td><td><button class="sound-btn" data-sound="hf-too">too</button></td><td><button class="sound-btn" data-sound="hf-can">can</button></td></tr>
-        <tr><td><button class="sound-btn" data-sound="hf-cannot">cannot</button></td><td><button class="sound-btn" data-sound="hf-get">get</button></td><td><button class="sound-btn" data-sound="hf-i">I</button></td><td><button class="sound-btn" data-sound="hf-is">is</button></td></tr>
-        <tr><td><button class="sound-btn" data-sound="hf-on">on</button></td><td><button class="sound-btn" data-sound="hf-see">see</button></td><td><button class="sound-btn" data-sound="hf-the">the</button></td><td></td></tr>
+        <tr>
+          <td><button class="sound-btn" data-sound="hf-me">me</button></td>
+          <td><button class="sound-btn" data-sound="hf-of">of</button></td>
+          <td><button class="sound-btn" data-sound="hf-too">too</button></td>
+          <td><button class="sound-btn" data-sound="hf-can">can</button></td>
+        </tr>
+        <tr>
+          <td><button class="sound-btn" data-sound="hf-cannot">cannot</button></td>
+          <td><button class="sound-btn" data-sound="hf-get">get</button></td>
+          <td><button class="sound-btn" data-sound="hf-i">I</button></td>
+          <td><button class="sound-btn" data-sound="hf-is">is</button></td>
+        </tr>
+        <tr>
+          <td><button class="sound-btn" data-sound="hf-on">on</button></td>
+          <td><button class="sound-btn" data-sound="hf-see">see</button></td>
+          <td><button class="sound-btn" data-sound="hf-the">the</button></td>
+          <td></td>
+        </tr>
       </table>
-    </section>
-  </main>
 
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 CVC Phonics. All rights reserved.</p>
-    </div>
-  </footer>
-
-  <!-- Scripts -->
-  <script>
-    // Play corresponding sound on button click
-    document.querySelectorAll('.sound-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const audio = document.getElementById('sound-' + btn.dataset.sound);
-        if (audio) audio.play();
-      });
-    });
-  </script>
-</body>
-</html>
+      <!-- Audio elements for HF words -->
+      <audio id="sound-hf-me" src="../../../assets/audio/me.mp3" preload="none"></audio>
+      <audio id="sound-hf-of" src="../../../assets/audio/of.mp3" preload="none"></audio>
+      <audio id="sound-hf-too" src="../../../assets/audio/to<p>`
