--- a/learn/decodable/index.html
+++ b/learn/decodable/index.html
@@ -28,16 +28,12 @@
     </div>
   </header>
 
-  <!-- Breadcrumb Buttons -->
-  <div class="container breadcrumb-buttons" style="margin: 1rem auto; max-width: 400px; text-align: center;">
-    <a href="/learn/index.html" class="btn">Learning Activities</a>
-    <a href="/learn/decodable/index.html" class="btn active">Decodable Books</a>
-  </div>
-
   <!-- Main Content -->
   <main class="decodable-index container">
-    <h1>Decodable Books</h1>
-    <p>Select a book below to begin:</p>
+    <div class="page-header text-center">
+      <h1>Decodable Books</h1>
+      <p>Select a book below to begin:</p>
+    </div>
 
     <div class="book-grid">
       <!-- Book 12 Card -->
