--- a/learn/decodable/book12/menu.html
+++ b/learn/decodable/book12/menu.html
@@ -5,18 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Can Hop | Decodable Books - CVC Phonics</title>
-  <!-- Site-wide styles -->
+  <!-- site-wide styles -->
   <link rel="stylesheet" href="/styles/main.css">
-  <!-- Learn section styles -->
   <link rel="stylesheet" href="/styles/learn.css">
-  <!-- Decodable section overrides -->
   <link rel="stylesheet" href="/styles/decodable.css">
 </head>
 <body>
-  <!-- Header/Nav -->
-  <header class="site-header">
+  <!-- Learn-style header with logo -->
+  <header class="site-header learn-header">
     <div class="container">
-      <a href="/" class="logo">CVC Phonics</a>
+      <a href="/learn/index.html" class="logo">
+        <img src="/assets/logo-learn.webp" alt="Michael's Phonics Hub – Learning">
+      </a>
       <nav class="main-nav">
         <ul>
           <li><a href="/learn/index.html">Learning Activities</a></li>
@@ -26,37 +26,46 @@
     </div>
   </header>
 
-  <!-- Main Content -->
-  <main class="decodable-menu container">
+  <!-- Bubble-style nav back to home, activities, decodables -->
+  <div class="container breadcrumb-buttons" style="margin:1rem auto; max-width:400px;">
+    <a href="/" class="btn">Home</a>
+    <a href="/learn/index.html" class="btn">Learning Activities</a>
+    <a href="/learn/decodable/index.html" class="btn">Decodable Books</a>
+  </div>
+
+  <!-- Main menu -->
+  <main class="decodable-menu container text-center" style="margin-top:2rem;">
+    <!-- Centered title -->
     <h1>I Can Hop</h1>
-    <p>Choose how you'd like to explore this book:</p>
-    <ul class="menu-list">
-      <li>
-        <a href="read.html" class="menu-item">
-          <span class="icon">📖</span> Read the Book
-        </a>
-      </li>
-      <li>
-        <a href="video.html" class="menu-item">
-          <span class="icon">🎥</span> Watch Read-Along
-        </a>
-      </li>
-      <li>
-        <a href="prelearning.html" class="menu-item">
-          <span class="icon">🧠</span> Pre-Learning Activities
-        </a>
-      </li>
-    </ul>
+
+    <!-- Book cover -->
+    <img
+      src="/assets/images/decodable/book12/poster.webp"
+      alt="I Can Hop cover"
+      style="max-width:200px; height:auto; margin:1rem auto;"
+    >
+
+    <!-- Option buttons -->
+    <div style="display:inline-flex; flex-direction:column; gap:1rem; margin-top:2rem;">
+      <a href="read.html" class="btn">
+        📖 Read the Book
+      </a>
+      <a href="video.html" class="btn">
+        🎥 Watch Read-Along
+      </a>
+      <a href="prelearning.html" class="btn">
+        🧠 Pre-Learning Activities
+      </a>
+    </div>
   </main>
 
   <!-- Footer -->
-  <footer class="site-footer">
+  <footer class="site-footer" style="margin-top:3rem;">
     <div class="container">
       <p>&copy; 2025 CVC Phonics. All rights reserved.</p>
     </div>
   </footer>
 
-  <!-- Scripts -->
   <script src="/scripts/main.js"></script>
 </body>
 </html>
